--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,13 @@ img#logo {
     background-color: #fb0000; /* Cambiar color al pasar el mouse */
 }
 
+
+#reserva {
+    display: none;
+    /* Otros estilos */
+  }
+  
+
 /* Clearfix para el encabezado */
 header::after {
     content: "";
