--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,9 @@ img#logo-footer {
 }
 
 /*estilos para el carrusel de imagenes */
-
+body {
+    margin: 0;
+  }
 .carrusel {
   height: 100vh;
   display: flex;
