nuevos cambios la seccion galeria4

--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ body {
 .carrusel {
   height: 100vh;
   display: flex;
-  align-items: normal;
+  align-items: flex-end;
 }
 
 .carrusel-items {
