--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ nav a {
 
 /* Estilo para las secciones */
 section {
-    background-color: rgba(232, 232, 232, 0.804);
+    background-color: rgba(44, 229, 62, 0.14);
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -141,17 +141,60 @@ img#logo-footer {
 }
 
 
+/*-----------------------------------------------------------------*/
+/*Estilos para el carrusel de imagenes de fondo de la seccion reservar*/
+#carousel-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: carousel 30s infinite;
+    background-size: cover;
+  }
+  
+  @keyframes carousel {
+    0%, 100% {
+      background-image: url('fotos/IMG_49266.png');
+    }
+    20% {
+      background-image: url('fotos/IMG_49269.png');
+    }
+    40% {
+      background-image: url('fotos/IMG_5157.png');
+    }
+    60% {
+      background-image: url('fotos/IMG_6.png');
+    }
+    80% {
+    background-image: url('fotos/2.png');
+    }
+  }
+  
+
+  #reserva {
+    position: relative;
+    padding: 20px;
+    border-radius: 20px;
+    max-width: 500px;
+    margin: 0 auto;
+    background-color: rgba(42, 218, 57, 0.608);
+    z-index: 1; /* Coloca el contenido del carrusel en la parte superior */
+  }
+    
+
 /* Estilos para la sección de reserva */
 .reserva-container {
     padding: 20px;
     border-radius: 20px;
-    background-color: rgba(124, 246, 84, 0.685);
+    background-color: rgb(64, 255, 0);
     max-width: 500px;
     margin: 0 auto;
 }
 /* Estilos adicionales para el formulario de reserva */
 #reserva-form {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(214, 233, 88, 0.8);
     padding: 20px;
     border-radius: 10px;
     margin: 20px auto;
@@ -177,7 +220,7 @@ img#logo-footer {
 }
 
 #reserva button {
-    background-color: #cfd210;
+    background-color: #2dd210;
     color: rgb(6, 6, 6);
     padding: 10px 20px;
     border: none;
