--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 768px) {}
 /* Estilo para el logo en el encabezado */
 img#logo {
     float: left;
@@ -6,7 +7,6 @@ img#logo {
     margin-right: 20px;
 }
 
-/* Estilo para el botón Reservar */
 /* Estilo para el botón de reserva en la barra de navegación */
 #reservar-link {
     float: right;
@@ -43,7 +43,7 @@ header {
     background-color: #482919;
     color: rgb(0, 0, 0);
     text-align: center;
-    padding: 5px;
+    padding: 1%; /* Cambiado de 5px a 1% */
     overflow: hidden; /* Limpiar el float dentro del encabezado */
 }
 
@@ -118,6 +118,30 @@ img#logo-footer {
 }
 
 /*-----------------------------------------------------------------*/
+/* Estilo para el contenedor del carrusel de imágenes */
+#carousel-container-inicio {
+    position: relative; /* Cambiado a relativo para que los elementos absolutos se posicionen en relación con este contenedor */
+    height: 50vh; /* Ajusta la altura según sea necesario */
+}
+
+/* Estilo para el contenedor del video de Facebook */
+.fb-video-container {
+    position: absolute;
+    top: 50%; /* Coloca el elemento en el 50% de la altura del contenedor padre */
+    left: 30%; /* Coloca el elemento en el 50% del ancho del contenedor padre */
+    transform: translate(-50%, -50%); /* Centra el elemento correctamente */
+    width: 70%; /* Ajusta el ancho según sea necesario */
+    max-width: 800px; /* Ajusta el ancho máximo según sea necesario */
+    z-index: 2; /* Asegura que el video esté sobre el carrusel */
+}
+
+/* Estilo para ajustar el ancho del video para que sea responsivo */
+.fb-video {
+    width: 100%;
+    height: 100%;
+}
+
+/* Resto de tus estilos para el carrusel y otros elementos */
 
 /*-----------------------------------------------------------------*/
 /* Estilo para el carrusel de la seccion de inicio  */
@@ -157,7 +181,7 @@ img#logo-footer {
 /* Estilo para el contenedor de texto en la sección de inicio */
 #contenido-inicio {
     float: right;
-    width: 20%;
+    width: 60%; /* Ajustado para que no sea demasiado ancho en pantallas pequeñas */
     background-color: #f6cba1;
     padding: 10px;
     margin-left: 10%; /* Agrega espacio a la izquierda */
@@ -234,7 +258,7 @@ img#logo-footer {
     position: relative;
     padding: 20px;
     border-radius: 20px;
-    max-width: 500px;
+    width: 100%; /* Cambiado de anchos fijos a 100% */
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.608);
     z-index: 1; /* Coloca el contenido del carrusel en la parte superior */
@@ -413,12 +437,12 @@ body {
   display: flex;
   overflow-x: hidden;
   overflow-y: hidden;
-  padding: 30px 0px;
+  padding: 2% 0; /* Ajustado el padding */
 }
 
 .carrusel-item {
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 15%;
+  max-width: 15%;
   height: 200px;
   outline: 2px solid black;
   cursor: pointer;
