--- a/styles.css
+++ b/styles.css
@@ -134,14 +134,13 @@ img#logo-footer {
     max-width: 800px; /* Ajusta el ancho máximo según sea necesario */
     z-index: 2; /* Asegura que el video esté sobre el carrusel */
 }
-
-/* Estilo para ajustar el ancho del video para que sea responsivo */
-.fb-video {
-    width: 100%;
-    height: 100%;
+/* Estilos adicionales para dispositivos pequeños */
+@media screen and (max-width: 768px) {
+    .fb-video-container {
+        width: 90%; /* Ajusta el ancho para pantallas pequeñas */
+        left: 5%; /* Ajusta la posición a la izquierda para pantallas pequeñas */
+    }
 }
-
-/* Resto de tus estilos para el carrusel y otros elementos */
 
 /*-----------------------------------------------------------------*/
 /* Estilo para el carrusel de la seccion de inicio  */
