nuevos cambios en la seccion inicio 7

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ section {
 
 /* Estilo para el pie de página */
 footer {
-    background-color: #553725c7;
+    background-color: #553725;
     color: white;
     text-align: center;
     padding: 36px;
