--- a/styles.css
+++ b/styles.css
@@ -597,27 +597,106 @@ img#logo-footer {
 
 
 /*-----------------------------------------------------------------------------------------------*/
-/* Estilo para el contenedor de restaurante */
-.restaurante-container {
-    display: flex;
-    justify-content: space-between; /* Colocar las habitaciones equidistantes */
-    flex-wrap: wrap; /* Permitir que las habitaciones se envuelvan si el espacio es insuficiente */
-}
-
-/* Estilo para cada habitación */
+/* Estilo para cada restaurante */
 .restaurante {
-    flex: 0 0 calc(33.33% - 10px); /* Establecer el ancho de cada habitación (33.33% del ancho total) con espacio entre ellas */
-    background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco o el color que desees */
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #e5c9aeab;
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 20px; /* Espacio inferior entre habitaciones */
-    box-sizing: border-box; /* Incluir relleno en el ancho total */
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
-/* Estilo para las imágenes de las habitaciones */
+
+/* Estilo para las imágenes de los restaurantes */
 .restaurante img {
-    max-width: 100%; /* Establece el ancho máximo al 100% del contenedor */
-    height: auto; /* Ajusta automáticamente la altura para mantener la proporción */
+    max-width: 50%;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
 }
+
+/* Estilo para el contenido de texto en cada restaurante */
+.restaurante .contenido-texto {
+    max-width: 40%;
+    color: #282828;
+    text-align: left;
+}
+
+/* Estilo para el título del restaurante */
+.restaurante h3 {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    margin: 0;
+    color: #fff;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+/* Mostrar el título al pasar el mouse */
+.restaurante:hover h3 {
+    opacity: 1;
+}
+
+/* Efecto de escala en la imagen al pasar el mouse */
+.restaurante:hover img {
+    transform: scale(1.05);
+}
+
+/* Estilo para los cuadros de texto de cada restaurante */
+.restaurante .texto-container {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para los párrafos de texto */
+.restaurante p {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+/* Estilo para el carrusel de fondo de la sección de restaurante */
+#carousel-container-restaurante {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: carousel-restaurante 30s infinite;
+    background-size: cover;
+}
+
+@keyframes carousel-restaurante {
+    0%, 100% {
+        background-image: url('fotos/IMG_49266.png');
+    }
+    20% {
+        background-image: url('fotos/IMG_49269.png');
+    }
+    40% {
+        background-image: url('fotos/IMG_5157.png');
+    }
+    60% {
+        background-image: url('fotos/IMG_6.png');
+    }
+    80% {
+        background-image: url('fotos/2.png');
+    }
+}
+
+/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
 /*estilos para el carrusel de imagenes */
 body {
