--- a/styles.css
+++ b/styles.css
@@ -299,37 +299,7 @@ img#logo-footer {
     color: #E5C9AE; /* Cambia el color del ícono */
 }
 
-/*------------------------------------------------------------------------------------------*/
-#carousel-container-habitaciones {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    animation: carousel-habitaciones 30s infinite;
-    background-size: cover;
-}
 
-@keyframes carousel-habitaciones {
-    0%, 100% {
-        background-image: url('fotos/IMG_49266.png');
-    }
-    20% {
-        background-image: url('fotos/IMG_49269.png');
-    }
-    40% {
-        background-image: url('fotos/IMG_5157.png');
-    }
-    60% {
-        background-image: url('fotos/IMG_6.png');
-    }
-    80% {
-        background-image: url('fotos/2.png');
-    }
-}
-
-/*------------------------------------------------------------------------------------------*/
 /*Estilos para el carrusel de imagenes de fondo de la seccion reservar*/
 #carousel-container {
     position: absolute;
@@ -592,11 +562,37 @@ img#logo-footer {
 .habitacion:focus {
     transform: scale(1.05);
 }
+/*------------------------------------------------------------------------------------------*/
+#carousel-container-habitaciones {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: carousel-habitaciones 30s infinite;
+    background-size: cover;
+}
 
-/*-----------------------------------------------------------------------------------------------*/
+@keyframes carousel-habitaciones {
+    0%, 100% {
+        background-image: url('fotos/IMG_49266.png');
+    }
+    20% {
+        background-image: url('fotos/IMG_49269.png');
+    }
+    40% {
+        background-image: url('fotos/IMG_5157.png');
+    }
+    60% {
+        background-image: url('fotos/IMG_6.png');
+    }
+    80% {
+        background-image: url('fotos/2.png');
+    }
+}
 
-
-/*-----------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------*/
 /* Estilo para la sección del restaurante */
 #restaurante {
     background-color: #f7f7f767;
@@ -636,7 +632,7 @@ img#logo-footer {
 
 /* Estilo para las imágenes de los restaurantes */
 .restaurante img {
-    max-width: 50%;
+    max-width: 30%; /* Ajuste del ancho máximo de la imagen */
     height: auto;
     border-radius: 10px;
     transition: transform 0.3s ease;
@@ -644,7 +640,7 @@ img#logo-footer {
 
 /* Estilo para el contenido de texto en cada restaurante */
 .restaurante .contenido-texto {
-    max-width: 60%; /* Ajusta el ancho del contenido-texto según tus preferencias */
+    max-width: 60%;
     color: #282828;
     text-align: left;
     padding: 20px;
@@ -694,9 +690,9 @@ img#logo-footer {
 
 /* Añadir clase específica para el segundo restaurante y moverlo a la derecha */
 .restaurante:nth-child(2) .contenido-texto {
-    max-width: 60%; /* Ajusta el ancho según tus preferencias */
-    margin-left: auto; /* Mover a la derecha */
-    order: -1; /* Cambiar el orden para que la imagen aparezca primero */
+    max-width: 60%;
+    margin-left: auto;
+    order: -1;
 }
 
 @keyframes carousel-restaurante {
@@ -719,23 +715,21 @@ img#logo-footer {
 
 /* Estilos para pantallas más pequeñas (ej. tabletas y móviles) */
 @media screen and (max-width: 768px) {
-    /* Ajuste el tamaño del título */
     #restaurante h2 {
         font-size: 2em;
     }
 
-    /* Ajuste el tamaño del párrafo */
     #restaurante p {
         font-size: 1em;
     }
 
-    /* Ajuste el tamaño de la fuente en el contenido de texto */
     .restaurante .contenido-texto {
         font-size: 14px;
     }
-
-    /* Otros ajustes según sea necesario */
 }
+
+
+/*-----------------------------------------------------------------------------------------------*/
 
 /*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
